Some GUI + DefaultVendingMachine generator.

--- a/ui/src/main/resources/gui.properties
+++ b/ui/src/main/resources/gui.properties
@@ -1,3 +1,5 @@
 vending.machine.main.fxml=/tdd/vendingMachine/ui/machine/VendingMachine.fxml
 window.title=Vending machine
 window.icon.path=/images/vending_machine_icon.png
+
+display.default.text=PLEASE SELECT PRODUCT CODE
