Refactoring, GUI development and event handling.

--- a/ui/src/main/resources/gui.properties
+++ b/ui/src/main/resources/gui.properties
@@ -2,4 +2,7 @@ vending.machine.main.fxml=/tdd/vendingMachine/ui/machine/VendingMachine.fxml
 window.title=Vending machine
 window.icon.path=/images/vending_machine_icon.png
 
-display.default.text=PLEASE SELECT PRODUCT CODE
+display.insert.coins.text=PLEASE INSERT COINS: %s
+
+component.code.text.class=shelf-code
+component.empty.shelf.color=e6e6e6
