--- a/ui/src/main/resources/gui.properties
+++ b/ui/src/main/resources/gui.properties
@@ -5,4 +5,4 @@ window.icon.path=/images/vending_machine_icon.png
 display.insert.coins.text=PLEASE INSERT COINS: %s
 
 component.code.text.class=shelf-code
-component.empty.shelf.color=e6e6e6
+component.full.opacity.class=full-opacity
